[package]
name = "rasynth"
version = "0.1.0"
authors = ["wheatfox <enkerewpo@hotmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
env_logger = "0.11.5"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
log = "0.4.22"
petgraph = "0.6.5"
rppal = "0.18.0"
