[package]
name = "rasynth"
version = "0.1.0"
authors = ["wheatfox <enkerewpo@hotmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
argparse = "0.2.2"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
env_logger = "0.11.5"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
log = "0.4.22"
mipidsi = "0.8.0"
petgraph = "0.6.5"
rppal = { version = "0.18.0", features = ["hal"] }
